--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,3 @@
-name: Build and Deploy
-
-on:
-  push:
-    branches:
-      - master
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,10 +16,16 @@ jobs:
         run: zola build
 
       - name: Deploy to GitHub Pages
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}  # Set your SSH key as a secret
         run: |
+          echo "$SSH_PRIVATE_KEY" > id_rsa
+          chmod 600 id_rsa
+          eval "$(ssh-agent -s)"
+          ssh-add id_rsa
           git config --global user.email "agriyain2k@gmail.com"
           git config --global user.name "lifeisacanvas24"
           git checkout -b gh-pages
           git add public/*
           git commit -m "Deploying to gh-pages"
-          git push --force origin gh-pages
+          git push --force git@github.com:lifeisacanvas24/lifeisacanvas24.git gh-pages
